// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HEADER TESTS should match the snapshot with a user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    user={
        Object {
            "username": "tman",
          }
    }
    visited={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="logo-container"
>
          <img
                    alt="BBQuest Logo"
                    className="logo"
                    src="pig64.png"
          />
          <h2
                    className="title"
          >
                    BBQuest
          </h2>
</div>,
        <h5
          className="user-name"
>
          Welcome tman!
</h5>,
        <ul
          className="navigation-links"
>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="visited-link nav-links"
                              to="/visited"
                    />
          </li>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="home-link nav-links"
                              to="/"
                    >
                              Search
                    </NavLink>
          </li>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="login-link nav-links"
                              to="/login"
                    >
                              <a
                                        className="log-out"
                                        onClick={undefined}
                              >
                                        Logout
                              </a>
                    </NavLink>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="BBQuest Logo"
              className="logo"
              src="pig64.png"
/>,
            <h2
              className="title"
>
              BBQuest
</h2>,
          ],
          "className": "logo-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "BBQuest Logo",
              "className": "logo",
              "src": "pig64.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "BBQuest",
              "className": "title",
            },
            "ref": null,
            "rendered": "BBQuest",
            "type": "h2",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome tman!",
          "className": "user-name",
        },
        "ref": null,
        "rendered": "Welcome tman!",
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="visited-link nav-links"
                            to="/visited"
              />
</li>,
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="home-link nav-links"
                            to="/"
              >
                            Search
              </NavLink>
</li>,
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="login-link nav-links"
                            to="/login"
              >
                            <a
                                          className="log-out"
                                          onClick={undefined}
                            >
                                          Logout
                            </a>
              </NavLink>
</li>,
          ],
          "className": "navigation-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="visited-link nav-links"
                to="/visited"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "",
                "className": "visited-link nav-links",
                "to": "/visited",
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="home-link nav-links"
                to="/"
>
                Search
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "Search",
                "className": "home-link nav-links",
                "to": "/",
              },
              "ref": null,
              "rendered": "Search",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="login-link nav-links"
                to="/login"
>
                <a
                                className="log-out"
                                onClick={undefined}
                >
                                Logout
                </a>
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": <a
                  className="log-out"
                  onClick={undefined}
>
                  Logout
</a>,
                "className": "login-link nav-links",
                "to": "/login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Logout",
                  "className": "log-out",
                  "onClick": undefined,
                },
                "ref": null,
                "rendered": "Logout",
                "type": "a",
              },
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="logo-container"
>
            <img
                        alt="BBQuest Logo"
                        className="logo"
                        src="pig64.png"
            />
            <h2
                        className="title"
            >
                        BBQuest
            </h2>
</div>,
          <h5
            className="user-name"
>
            Welcome tman!
</h5>,
          <ul
            className="navigation-links"
>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="visited-link nav-links"
                                    to="/visited"
                        />
            </li>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="home-link nav-links"
                                    to="/"
                        >
                                    Search
                        </NavLink>
            </li>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="login-link nav-links"
                                    to="/login"
                        >
                                    <a
                                                className="log-out"
                                                onClick={undefined}
                                    >
                                                Logout
                                    </a>
                        </NavLink>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="BBQuest Logo"
                className="logo"
                src="pig64.png"
/>,
              <h2
                className="title"
>
                BBQuest
</h2>,
            ],
            "className": "logo-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "BBQuest Logo",
                "className": "logo",
                "src": "pig64.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BBQuest",
                "className": "title",
              },
              "ref": null,
              "rendered": "BBQuest",
              "type": "h2",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome tman!",
            "className": "user-name",
          },
          "ref": null,
          "rendered": "Welcome tman!",
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="visited-link nav-links"
                                to="/visited"
                />
</li>,
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="home-link nav-links"
                                to="/"
                >
                                Search
                </NavLink>
</li>,
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="login-link nav-links"
                                to="/login"
                >
                                <a
                                                className="log-out"
                                                onClick={undefined}
                                >
                                                Logout
                                </a>
                </NavLink>
</li>,
            ],
            "className": "navigation-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="visited-link nav-links"
                  to="/visited"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "",
                  "className": "visited-link nav-links",
                  "to": "/visited",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="home-link nav-links"
                  to="/"
>
                  Search
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Search",
                  "className": "home-link nav-links",
                  "to": "/",
                },
                "ref": null,
                "rendered": "Search",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="login-link nav-links"
                  to="/login"
>
                  <a
                                    className="log-out"
                                    onClick={undefined}
                  >
                                    Logout
                  </a>
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": <a
                    className="log-out"
                    onClick={undefined}
>
                    Logout
</a>,
                  "className": "login-link nav-links",
                  "to": "/login",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Logout",
                    "className": "log-out",
                    "onClick": undefined,
                  },
                  "ref": null,
                  "rendered": "Logout",
                  "type": "a",
                },
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HEADER TESTS should match the snapshot with visited restaurants 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    user={
        Object {
            "username": "tman",
          }
    }
    visited={
        Array [
            "peewees",
            "moes",
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="logo-container"
>
          <img
                    alt="BBQuest Logo"
                    className="logo"
                    src="pig64.png"
          />
          <h2
                    className="title"
          >
                    BBQuest
          </h2>
</div>,
        <h5
          className="user-name"
>
          Welcome tman!
</h5>,
        <ul
          className="navigation-links"
>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="visited-link nav-links"
                              to="/visited"
                    >
                              Visited
                    </NavLink>
          </li>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="home-link nav-links"
                              to="/"
                    >
                              Search
                    </NavLink>
          </li>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="login-link nav-links"
                              to="/login"
                    >
                              <a
                                        className="log-out"
                                        onClick={undefined}
                              >
                                        Logout
                              </a>
                    </NavLink>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="BBQuest Logo"
              className="logo"
              src="pig64.png"
/>,
            <h2
              className="title"
>
              BBQuest
</h2>,
          ],
          "className": "logo-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "BBQuest Logo",
              "className": "logo",
              "src": "pig64.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "BBQuest",
              "className": "title",
            },
            "ref": null,
            "rendered": "BBQuest",
            "type": "h2",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome tman!",
          "className": "user-name",
        },
        "ref": null,
        "rendered": "Welcome tman!",
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="visited-link nav-links"
                            to="/visited"
              >
                            Visited
              </NavLink>
</li>,
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="home-link nav-links"
                            to="/"
              >
                            Search
              </NavLink>
</li>,
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="login-link nav-links"
                            to="/login"
              >
                            <a
                                          className="log-out"
                                          onClick={undefined}
                            >
                                          Logout
                            </a>
              </NavLink>
</li>,
          ],
          "className": "navigation-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="visited-link nav-links"
                to="/visited"
>
                Visited
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "Visited",
                "className": "visited-link nav-links",
                "to": "/visited",
              },
              "ref": null,
              "rendered": "Visited",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="home-link nav-links"
                to="/"
>
                Search
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "Search",
                "className": "home-link nav-links",
                "to": "/",
              },
              "ref": null,
              "rendered": "Search",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="login-link nav-links"
                to="/login"
>
                <a
                                className="log-out"
                                onClick={undefined}
                >
                                Logout
                </a>
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": <a
                  className="log-out"
                  onClick={undefined}
>
                  Logout
</a>,
                "className": "login-link nav-links",
                "to": "/login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Logout",
                  "className": "log-out",
                  "onClick": undefined,
                },
                "ref": null,
                "rendered": "Logout",
                "type": "a",
              },
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="logo-container"
>
            <img
                        alt="BBQuest Logo"
                        className="logo"
                        src="pig64.png"
            />
            <h2
                        className="title"
            >
                        BBQuest
            </h2>
</div>,
          <h5
            className="user-name"
>
            Welcome tman!
</h5>,
          <ul
            className="navigation-links"
>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="visited-link nav-links"
                                    to="/visited"
                        >
                                    Visited
                        </NavLink>
            </li>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="home-link nav-links"
                                    to="/"
                        >
                                    Search
                        </NavLink>
            </li>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="login-link nav-links"
                                    to="/login"
                        >
                                    <a
                                                className="log-out"
                                                onClick={undefined}
                                    >
                                                Logout
                                    </a>
                        </NavLink>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="BBQuest Logo"
                className="logo"
                src="pig64.png"
/>,
              <h2
                className="title"
>
                BBQuest
</h2>,
            ],
            "className": "logo-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "BBQuest Logo",
                "className": "logo",
                "src": "pig64.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BBQuest",
                "className": "title",
              },
              "ref": null,
              "rendered": "BBQuest",
              "type": "h2",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome tman!",
            "className": "user-name",
          },
          "ref": null,
          "rendered": "Welcome tman!",
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="visited-link nav-links"
                                to="/visited"
                >
                                Visited
                </NavLink>
</li>,
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="home-link nav-links"
                                to="/"
                >
                                Search
                </NavLink>
</li>,
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="login-link nav-links"
                                to="/login"
                >
                                <a
                                                className="log-out"
                                                onClick={undefined}
                                >
                                                Logout
                                </a>
                </NavLink>
</li>,
            ],
            "className": "navigation-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="visited-link nav-links"
                  to="/visited"
>
                  Visited
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Visited",
                  "className": "visited-link nav-links",
                  "to": "/visited",
                },
                "ref": null,
                "rendered": "Visited",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="home-link nav-links"
                  to="/"
>
                  Search
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Search",
                  "className": "home-link nav-links",
                  "to": "/",
                },
                "ref": null,
                "rendered": "Search",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="login-link nav-links"
                  to="/login"
>
                  <a
                                    className="log-out"
                                    onClick={undefined}
                  >
                                    Logout
                  </a>
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": <a
                    className="log-out"
                    onClick={undefined}
>
                    Logout
</a>,
                  "className": "login-link nav-links",
                  "to": "/login",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Logout",
                    "className": "log-out",
                    "onClick": undefined,
                  },
                  "ref": null,
                  "rendered": "Logout",
                  "type": "a",
                },
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HEADER TESTS should match the snapshot without a user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    user={Object {}}
    visited={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="logo-container"
>
          <img
                    alt="BBQuest Logo"
                    className="logo"
                    src="pig64.png"
          />
          <h2
                    className="title"
          >
                    BBQuest
          </h2>
</div>,
        <h5
          className="user-name"
/>,
        <ul
          className="navigation-links"
>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="visited-link nav-links"
                              to="/visited"
                    />
          </li>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="home-link nav-links"
                              to="/"
                    >
                              Search
                    </NavLink>
          </li>
          <li>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              className="login-link nav-links"
                              to="/login"
                    >
                              Login
                    </NavLink>
          </li>
</ul>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <img
              alt="BBQuest Logo"
              className="logo"
              src="pig64.png"
/>,
            <h2
              className="title"
>
              BBQuest
</h2>,
          ],
          "className": "logo-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "BBQuest Logo",
              "className": "logo",
              "src": "pig64.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "BBQuest",
              "className": "title",
            },
            "ref": null,
            "rendered": "BBQuest",
            "type": "h2",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "user-name",
        },
        "ref": null,
        "rendered": "",
        "type": "h5",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="visited-link nav-links"
                            to="/visited"
              />
</li>,
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="home-link nav-links"
                            to="/"
              >
                            Search
              </NavLink>
</li>,
            <li>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            className="login-link nav-links"
                            to="/login"
              >
                            Login
              </NavLink>
</li>,
          ],
          "className": "navigation-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="visited-link nav-links"
                to="/visited"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "",
                "className": "visited-link nav-links",
                "to": "/visited",
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="home-link nav-links"
                to="/"
>
                Search
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "Search",
                "className": "home-link nav-links",
                "to": "/",
              },
              "ref": null,
              "rendered": "Search",
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="login-link nav-links"
                to="/login"
>
                Login
</NavLink>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "Login",
                "className": "login-link nav-links",
                "to": "/login",
              },
              "ref": null,
              "rendered": "Login",
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="logo-container"
>
            <img
                        alt="BBQuest Logo"
                        className="logo"
                        src="pig64.png"
            />
            <h2
                        className="title"
            >
                        BBQuest
            </h2>
</div>,
          <h5
            className="user-name"
/>,
          <ul
            className="navigation-links"
>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="visited-link nav-links"
                                    to="/visited"
                        />
            </li>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="home-link nav-links"
                                    to="/"
                        >
                                    Search
                        </NavLink>
            </li>
            <li>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    className="login-link nav-links"
                                    to="/login"
                        >
                                    Login
                        </NavLink>
            </li>
</ul>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="BBQuest Logo"
                className="logo"
                src="pig64.png"
/>,
              <h2
                className="title"
>
                BBQuest
</h2>,
            ],
            "className": "logo-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "BBQuest Logo",
                "className": "logo",
                "src": "pig64.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BBQuest",
                "className": "title",
              },
              "ref": null,
              "rendered": "BBQuest",
              "type": "h2",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "user-name",
          },
          "ref": null,
          "rendered": "",
          "type": "h5",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="visited-link nav-links"
                                to="/visited"
                />
</li>,
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="home-link nav-links"
                                to="/"
                >
                                Search
                </NavLink>
</li>,
              <li>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                className="login-link nav-links"
                                to="/login"
                >
                                Login
                </NavLink>
</li>,
            ],
            "className": "navigation-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="visited-link nav-links"
                  to="/visited"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "",
                  "className": "visited-link nav-links",
                  "to": "/visited",
                },
                "ref": null,
                "rendered": "",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="home-link nav-links"
                  to="/"
>
                  Search
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Search",
                  "className": "home-link nav-links",
                  "to": "/",
                },
                "ref": null,
                "rendered": "Search",
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  aria-current="page"
                  className="login-link nav-links"
                  to="/login"
>
                  Login
</NavLink>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Login",
                  "className": "login-link nav-links",
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Login",
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
